--- a/projectstyles.css
+++ b/projectstyles.css
@@ -95,7 +95,6 @@ body{
     display:none;
 
 }
-
 .uparrowimg.show{
     filter:brightness(100%);
     display:block;
@@ -171,7 +170,12 @@ body{
     display:flex;
     flex-direction:column;
 }
-
+.wheelscroll{
+    height: 66vh;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-evenly;
+}
 
 
 
@@ -229,6 +233,8 @@ body{
 .displayed-wheels.show{
     display:block;
 }
+
+
 .front-wheel{
 
     position: absolute;
@@ -237,17 +243,6 @@ body{
     cursor: move;
 }
 
-.fw{
-    position:absolute;
-    height: 120px;
-    width: 120px;
-}
-
-.movefront{
-    height: 150px;
-    width: 150px;
-    background-color: blue;
-}
 
 .rear-wheel{
 
@@ -258,8 +253,8 @@ body{
     cursor: move;
 }
 
-.wheel2img.border{
-    outline: 3px solid white;
-    outline-style: ridge;
+
+.wheel2img.selected{
+    background-color: #454545;
 }
 
