--- a/projectstyles.css
+++ b/projectstyles.css
@@ -210,6 +210,9 @@ body{
 /*Image Settings*/
 
 .carimage{
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
     grid-area:carimage;
     background-image: url("img/MySubaru.jpg");
     transition: ease-in;
@@ -222,6 +225,21 @@ body{
     border-style:solid;
 
 }
+
+.loading{
+        border: 16px solid #f3f3f3; /* Light grey */
+        border-top: 16px solid #3498db; /* Blue */
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 2s linear infinite;
+      }
+      
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+
 .subarupic{
     height: 100%;
 }
