--- a/projectstyles.css
+++ b/projectstyles.css
@@ -227,6 +227,7 @@ body{
 
 }
 
+
 .loading{
         border: 16px solid #f3f3f3; /* Light grey */
         border-top: 16px solid #3498db; /* Blue */
@@ -234,6 +235,7 @@ body{
         width: 120px;
         height: 120px;
         animation: spin 2s linear infinite;
+        box-shadow: 0px 0px 80px black;
       }
       
       @keyframes spin {
