--- a/projectstyles.css
+++ b/projectstyles.css
@@ -106,9 +106,14 @@ body{
 
 }
 
-.calipericonimg{
-    cursor:pointer;
+.backbutton.removeedges{
+    background-color:#161616;
+    height:100%;
+    border-bottom-right-radius: 0px;
+
 }
+
+
 
 .uparrow{
 
@@ -145,11 +150,23 @@ body{
     height:100%;
     width:100%;
     background-color:#2b2b2b;
+    border-bottom-right-radius: 8px;
 }
-.wheeliconimg{
-    height:60px;
+.wheelicon.roundEdges{
+    border-bottom-right-radius: 8px;
 }
 
+.wheeliconimg{
+    height:80px;
+    cursor:pointer;
+    transition: height 0.3s ;
+    -webkit-transition: -webkit-transform .5s ease-in-out;
+}
+.wheeliconimg:hover {
+    transform:rotate(180deg);
+    -ms-transform:rotate(180deg);
+    -webkit-transform:rotate(180deg);
+}
 
 
 
@@ -162,9 +179,17 @@ body{
 }
 .calipericonimg{
     height:60px;
+    cursor:pointer;
+    transition: height 0.25s;
+    transition: all .3s ease-in-out;
+    -webkit-transition: -webkit-transform .3s ease-in-out; 
 }
 
-
+.calipericonimg:hover {
+    transform:rotate(30deg);
+    -ms-transform:rotate(30deg);
+    -webkit-transform:rotate(30deg);
+}
 
 
 .filtericon{
@@ -218,7 +243,7 @@ body{
 }
 
 .downarrowimg.hide{
-    display:none;
+    display:none !important;
 }
 
 
@@ -227,6 +252,10 @@ body{
     height:100%;
     width:100%;
     background-color:#161616;
+}
+
+.colfillerround{
+    border-top-right-radius: 8px;
 }
 
 
