--- a/projectstyles.css
+++ b/projectstyles.css
@@ -199,7 +199,7 @@ body{
     background-color:#2b2b2b;
 }
 
-.filtericonimg{
+.middlebuttonimg{
     grid-area:filtericon;
     height:60px;
     cursor: pointer;
